Fixed issue with icons alignment in smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -192,13 +192,9 @@ a:active{
   
   .icon {
 		font-size: 4em !important;
-<<<<<<< HEAD
     margin: 15px;
 	}
 }
-=======
-    margin: 0 15px;
-	}
-}
 
->>>>>>> gh-pages
+
+
